--- a/Ayad/index.html
+++ b/Ayad/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <head>
-    <title>Ayad</title>
-
+    <title>Ayads website</title>
 </head>
 
 <body>
+<header>
     <h1>Welcome to Ayad's Page</h1><br>
+</header>
+
+<img src="https://plus.unsplash.com/premium_photo-1687726346756-4fb29bfc5797?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8aGVsbG98ZW58MHx8MHx8" alt="A picture of hello" width="500" height="300" title="a welcoming to my gays hub ">
+<main>
     <p>This is Ayad's personal page.</p>
     <p>Feel free to explore and learn more about me!</p>
+    <p>can we move on</p>
+    <p>we cant see the moon for now</p>
+    <p>see the moonlight</p>
+    <ul>
+        <li>Bring the milk</li>
+        <li>COmplete</li>
+    </ul>
+</main>
+<footer >
+    <p>&copy; Copyright 2025 </p>
+</footer>
 </body>
+</html>
+
