--- a/Hamdan/index.html
+++ b/Hamdan/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>the gangs page</title>
 </head>
 <body>
     
+    <header> 
+        <h1>i love my friends</h1> 
+        <img src="https://images.unsplash.com/photo-1599148401005-fe6d7497cb5e?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cGxhbnRzfGVufDB8fDB8fHww" alt="A plant" width="170" height="100" title="A beautiful leaf pl">
+    </header>
+   
+    <main> 
+        <p> lets learn together </p> 
+        <ol>
+        <li>hamza is a nice person</li>
+        </ol>
+    </main>
+   
+    <footer> 
+        <p>&COPY;copyright hamdan 2025
+    </footer>
 </body>
+
 </html>
