Co-authored-by: Ayadinho10 <Ayadinho10@users.noreply.github.com> Co-authored-by: W7shKing <W7shKing@users.noreply.github.com>

--- a/Hamdan/index.html
+++ b/Hamdan/index.html
@@ -13,13 +13,17 @@
     <main> 
         <p> lets learn together </p> 
         <ol>
-        <li>hamza is a nice person</li>
+        <li>hamza is a <a href="https://google.com">nice</a> person</li>
         </ol>
     </main>
-   
-    <footer> 
-        <p>&COPY;copyright hamdan 2025
-    </footer>
-</body>
+    
+<footer>
+    <a href="https://www.instagram.com" target="_blank">
+        <button>
+            <p>my gangs love to have many friends</p>
+         </button> 
+    </a>
 
+</footer>
+    </body>
 </html>
