--- a/Ayad/index.html
+++ b/Ayad/index.html
@@ -4,25 +4,40 @@
 </head>
 
 <body>
+
 <header>
     <h1>Welcome to Ayad's Page</h1><br>
 </header>
+<a href="https://www.google.com">
+    <img src="https://plus.unsplash.com/premium_photo-1687726346756-4fb29bfc5797?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8aGVsbG98ZW58MHx8MHx8" alt="a picture of hello" width="500" height="300" title="a welcoming to my website"></a>
 
-<img src="https://plus.unsplash.com/premium_photo-1687726346756-4fb29bfc5797?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8aGVsbG98ZW58MHx8MHx8" alt="A picture of hello" width="500" height="300" title="a welcoming to my gays hub ">
 <main>
+    <a href="https://www.google.com" title="Go to Google">
+        <button><h1>Click me</h1></button>  
+    </a><br><br>
+
+    Click<a href="https://www.google.com" title="Go to Google"> here </a>to visit Google.
+    <p>Welcome to my personal page!</p>
     <p>This is Ayad's personal page.</p>
     <p>Feel free to explore and learn more about me!</p>
     <p>can we move on</p>
     <p>we cant see the moon for now</p>
     <p>see the moonlight</p>
+    
     <ul>
         <li>Bring the milk</li>
         <li>COmplete</li>
     </ul>
+   
+    <a herf="https://www.google.com" target="_blank" title="Go to Google"
+</a>
+
 </main>
+
 <footer >
     <p>&copy; Copyright 2025 </p>
 </footer>
+
 </body>
 </html>
 
