--- a/Hamza/index.html
+++ b/Hamza/index.html
@@ -1,24 +1,11 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My Website</title>
-  </head>
-  <body>
-    <header>
-      <h1>Site Title</h1    
-    </header>
-   
-    <main>
-      <p>This is the main content users come to see.</p>
-      <ul>
-        <li>Bring groceries</li>
-        <li>Complete homework</li>
-      </ul>
-    </main>
-
-    <footer>
-      <p>&copy; Copyright 2025</p>
-    </footer>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <button>Hello</button>
+</body>
 </html>
-
