Co-authored-by: Ayadinho10 <Ayadinho10@users.noreply.github.com> Co-authored-by: W7shKing <W7shKing@users.noreply.github.com>

--- a/Ayad/index.html
+++ b/Ayad/index.html
@@ -1,43 +1,59 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Ayads website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
+    <header>
+        <h1>My project</h1>
+        <img src="https://plus.unsplash.com/premium_photo-1687726346756-4fb29bfc5797?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8aGVsbG98ZW58MHx8MHx8fDA%3D" title="picture of hello" alt="a picture of hello"
+                width="400" height="300" style="outline: 5px solid rgb(156, 144, 48); border-radius: 8px;">
+        <p style="background-color: #f9e79f; padding: 10px; border-radius: 6px;">i am ayad a white 150 year old male from india i am in grade 1</p><br>
+    </header>
+    </header>
+    <main>
+        <table border="1">
+        <tr>
+            <th>games<th>
+            <tb>football<tb>
+            </tr>
 
-<body>
+        <tr>
+            <th>games<th>
+            <tb>workingout<tb>
+            </tr>
 
-<header>
-    <h1>Welcome to Ayad's Page</h1><br>
-</header>
-<a href="https://www.google.com">
-    <img src="https://plus.unsplash.com/premium_photo-1687726346756-4fb29bfc5797?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8aGVsbG98ZW58MHx8MHx8" alt="a picture of hello" width="500" height="300" title="a welcoming to my website"></a>
-
-<main>
-    <a href="https://www.google.com" title="Go to Google">
-        <button><h1>Click me</h1></button>  
-    </a><br><br>
-
-    Click<a href="https://www.google.com" title="Go to Google"> here </a>to visit Google.
-    <p>Welcome to my personal page!</p>
-    <p>This is Ayad's personal page.</p>
-    <p>Feel free to explore and learn more about me!</p>
-    <p>can we move on</p>
-    <p>we cant see the moon for now</p>
-    <p>see the moonlight</p>
+        <tr>
+            <th>games<th>
+            <tb>eating<th>
+            </tr>
+     </table>
+<br>    
+    </main>
     
-    <ul>
-        <li>Bring the milk</li>
-        <li>COmplete</li>
-    </ul>
-   
-    <a herf="https://www.google.com" target="_blank" title="Go to Google"
-</a>
+  <>
+    <label for="name">Name:</label>
+    <input type="text" id="name" minlength="3" maxlength="25" required>
+<br>
+    <label for="favorite Color">favorite Color:</label>
+<br>
+    <label for="Red">Red</label>
+    <input type="radio" id="Red" value="Red" name="title">
+<br>
+    <label for="blue">Blue</label>
+    <input type="radio" id="blue" value="blue" name="title">
+<br>
+    <label for="pink">Pink</label>
+    <input type="radio" id="pink" value="pink" name="title">
 
-</main>
+    <br> <br>
+    <input type="submit" value="Send">
+  </form>
 
-<footer >
-    <p>&copy; Copyright 2025 </p>
-</footer>
-
+  <br><br>
+  <footer>
+    © All rights remain Ayad 2025  
+  </footer>
 </body>
 </html>
-
