--- a/Hamdan/index.html
+++ b/Hamdan/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
-<html
 <head>
-    <title>the gangs page</title>
+    <title> 
+        Welcome to the  page
+    </title>  
+    <meta charset="UTF-8">
 </head>
 <body>
+    <h1> welcome to my page</h1>
+
+    <h4> my name is</h4>
+
+    <p class="paragraph"> this page is how i teach you and tell you about myself thank you my boys
+    </p>
+    <a href="https://www.youtube.com/shorts/d9kFG5qD0fY">
+    <img src="https://images.unsplash.com/photo-1750513309434-028e597d8f8f?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
+    alt="an image of a man walking under a bridge" width="150" height="160" title="look at your momma" 
+    style="vertical-align: middle;"></a>A picture of my house in when you want 😉
     
-    <header> 
-        <h1>i love my friends</h1> 
-        <img src="https://images.unsplash.com/photo-1599148401005-fe6d7497cb5e?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cGxhbnRzfGVufDB8fDB8fHww" alt="A plant" width="170" height="100" title="A beautiful leaf pl">
-    </header>
-   
-    <main> 
-        <p> lets learn together </p> 
-        <ol>
-        <li>hamza is a <a href="https://google.com">nice</a> person</li>
-        </ol>
-    </main>
+
+    <h1>Hey Join and see  <a href="https://www.youtube.com/shorts/d9kFG5qD0fY" title="Check them out 😉">Pics
     
-<footer>
-    <a href="https://www.instagram.com" target="_blank">
-        <button>
-            <p>my gangs love to have many friends</p>
-         </button> 
     </a>
 
-</footer>
-    </body>
-</html>
+    </h1>
+</body>
+<script src="script.js"></script>
+<link rel="stylesheet" href="style.css">
