--- a/Hamza/index.html
+++ b/Hamza/index.html
@@ -4,8 +4,54 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <button>Hello</button>
+ 
+  <header>
+    <h1>This is a simple HTML document</h1>
+    <img src="https://images.unsplash.com/photo-1750490970730-493c7ea3fdf2?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDR8aVVJc25WdGpCMFl8fGVufDB8fHx8fA%3D%3D"
+          alt="A beautiful landscape" title="Beautiful Landscape" width="300" height="200">
+  </header>
+
+  <main>
+    <p>Lurem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+    <table border="1">
+      <tr>
+        <th>Roblox</th>
+        <th>Minecraft</th>
+        <th>Fortnite</th>
+      </tr>
+      <tr>
+        <td>2009</td>
+        <td>2011</td>
+        <td>2017</td>
+</tr>
+    </table>
+<br>
+    <a href="www.roblox.com" target="blank" title="Visit Roblox">Visit Roblox</a> <br><br>
+  </main>
+  <form>
+    <label for="name">Name:</label>
+    <input type="text" id="name" minlength="3" maxlength="25" required>
+<br>
+    <label for="favorite Color">favorite Color:</label>
+<br>
+    <label for="Red">Red</label>
+    <input type="radio" id="Red" value="Red" name="title">
+<br>
+    <label for="blue">Blue</label>
+    <input type="radio" id="blue" value="blue" name="title">
+<br>
+    <label for="pink">Pink</label>
+    <input type="radio" id="pink" value="pink" name="title">
+<br> <br>
+    <input type="submit" value="Send">
+  </form>
+<br><br>
+  <footer id="colored">
+    <p>© All rights remain Hamza 2025</p>  
+  </footer>
 </body>
 </html>
